added depends on for docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     image: 'redis:latest'
   
   nginx: 
+    depends_on:
+      - api
+      - client     
     restart: always
     build:
       dockerfile: Dockerfile.dev
