--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
   - docker push tromedo/multi-nginx
   - docker push tromedo/multi-server
   - docker push tromedo/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: ap-south-1
+  app: Complex
+  env: Complex-env
+  bucket_name: elasticbeanstalk-ap-south-1-102904975732
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access-key: $AWS_SECRET_KEY
